Thu Feb 15 16:50:34 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed per scheduler data input buffer in packet engine.  Use
	  list of inbufs instead of just one so that multiple streams
	  can do partial reads to different buffers.  Affected file is
	  lib/silccore/silcpacket.c.

Wed Feb 14 17:05:38 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed packet wrapper stream API to support encoder/decoder
	  for packets, and to handle partial reading correctly.  Fixed
	  also inbuf size checking in reading to have enough space before
	  reading.  Affected files are lib/silccore/silcpacket.[ch].

	* Rewrote file transfer in client library.  Affected files are
	  in lib/silcclient/.

	* Added TCP/UDP listener (internal) API to client library to have
	  generic way of dealing with listeners.  Fixed Key Agreement and
	  file transfer to use it.  Affected files are in lib/silcclient/.

	* Fixed SKE to process SUCCESS packets synchronously and to call
	  completion synchronously.  Affected file is lib/silcske/silske.c.

	* Fixed pthread rwlock detection.  Affected file includes/silc.h.in.

	* Implemented SILC_ATTRIBYUTE_PHONE_NUMBER.  Affected files are
	  lib/silccore/silcattrs.[ch].  SILC Protocol version 1.3 change.

Fri Feb  2 22:24:11 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added support for SILC protocol version 1.3 NEW_CLIENT packet
	  to client library.  Affected file is
	  lib/silcclient/client_register.c.

	* Serialize NICK and JOIN commands to avoid problems locally
	  with changing ID while joining to channel.  Affected file is
	  lib/silcclient/command.c.

	* Fixed entry resolving while handling incoming JOIN notify.
	  Handle properly cases, in re-processing of notify packets, where
	  the IDs may become invalid while resolving the entry (like nick
	  change).  Entry is invalid if it doesn't have nickname, and such
	  entries are not delivered to application anymore.  These fixes