@@ -264,7 +264,9 @@ client just changed nickname the 'new_nickname' includes the new nickname.
 Otherwise this pointer is NULL.  The 'user_mode' is the client's mode in
 the SILC network.  The 'notification' contains the notify type that
 happened for the 'watched_client' (for example
-SILC_NOTIFY_TYPE_NICK_CHANGE if the client changed their nickname).
+SILC_NOTIFY_TYPE_NICK_CHANGE if the client changed their nickname).  If
+the `new_nickname' is NULL and `notification' is SILC_NOTIFY_TYPE_NONE the
+`watched_client' has just joined the network.
 </td>
 <td width="50%"><small>SilcClientEntry watched_client, char *new_nickname,
 SilcUInt32 user_mode, SilcNotifyType notification, SilcPublicKey
